# MediaOptimizer

./: .exiftool_config  .gitignore  Dockerfile  README.md  ROADMAP  app_info.py  config.json-sample  main.py  mediaoptimizer.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS
classes/: argument.py  google_auth.py  google_photos.py  log.py  path_manager.py  tools.py
classes/responses/: google_upload_response.py
components/: file_manager.py  google_api_manager.py  media_optimizer.py  my_logging.py  startup.py  thread_manager.py
constants/: ffmpeg_codec_types.py  google_api_scope.py  media_mime_types.py
doc/: ffmpeg_image_optimizer.md  ffmpeg_video_optimizer.md  versioning_specification.md
helper/: extension_helper.py  timespan_logger.py
modules/: download_files.py  optimizer.py  upload_files.py
tests/: test_extension.py  test_magic.py
tests/data/: 8-6_SG-186288355_02.webm  IMG_20250710_184602.avif  IMG_20251012_030105.HEIF
